tests/shouldFail/process-missing_system_line.bc
//EXPECTED BEHAVIOUR:
//When we change the number of arguments to abs or max functions, or otherwise malform any of the arithmetic expressions, we should exit gracefully

//WHAT IT TESTS:
// -malformed infix expressions are gracefully caught and appropriately handled 

//definitions
proc1[ i, j ] = [i>=j] -> {i+1,max(max(j*5/2,-1),j)![max(i+1,j*6/3)],1};
proc2[ i, j ] = {abs(i*21),j/2?[i+3..1,j-4](x,y),1};

//system line (missing)

//>SystemLineMissing
